--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        ultimatebarx_version = "0.8.0"
+        ux_versionCode = 23
+        ux_versionName = "0.8.0"
+        kotlin_version = "1.6.10"
+        appcompat_version = "1.4.1"
+        fragment_version = "1.4.1"
+        corektx_version = "1.7.0"
+        material_version = "1.5.0"
+        recyclerview_version = "1.2.1"
+        lifecycle_version = "2.4.1"
+        nav_version = "2.4.1"
+        orbit_mvi_version = "4.3.2"
+    }
+}
 plugins {
-    id 'com.android.application' version '7.1.1' apply false
-    id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id "com.android.application" version "7.1.1" apply false
+    id "com.android.library" version "7.1.1" apply false
+    id "org.jetbrains.kotlin.android" version "$kotlin_version" apply false
 }
 
 task clean(type: Delete) {
