--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
+    id "kotlin-parcelize"
 }
 
 android {
@@ -30,6 +31,7 @@ android {
         jvmTarget = "1.8"
     }
     buildFeatures {
+        dataBinding true
         viewBinding true
     }
 }
@@ -47,6 +49,21 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "io.insert-koin:koin-android:3.1.5"
+    implementation("com.github.lisawray.groupie:groupie:2.10.0")
+    implementation("com.github.lisawray.groupie:groupie-kotlin-android-extensions:2.10.0")
+    implementation("com.github.lisawray.groupie:groupie-viewbinding:2.10.0")
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+//    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2")
+    implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
+    implementation("org.orbit-mvi:orbit-viewmodel:$orbit_mvi_version")
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+//    implementation("org.orbit-mvi:orbit-core:$orbit_mvi_version")
+    testImplementation("org.orbit-mvi:orbit-test:$orbit_mvi_version")
+
+
     testImplementation "junit:junit:4.13.2"
     testImplementation("org.orbit-mvi:orbit-test:$orbit_mvi_version")
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
