--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 //    implementation("org.orbit-mvi:orbit-core:$orbit_mvi_version")
     testImplementation("org.orbit-mvi:orbit-test:$orbit_mvi_version")
-
+    implementation("com.github.bumptech.glide:glide:4.12.0")
 
     testImplementation "junit:junit:4.13.2"
     testImplementation("org.orbit-mvi:orbit-test:$orbit_mvi_version")
