--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="net.wangyl.goldenlife">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".GoldApplication"
         android:allowBackup="true"
@@ -10,6 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.GoldenLife">
         <activity
             android:name=".MainActivity"
