--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
         lifecycle_version = "2.4.1"
         nav_version = "2.4.1"
         orbit_mvi_version = "4.3.2"
+        epoxyVersion = "5.0.0-beta05"
+        koin_version = "3.1.5"
     }
 }
 plugins {
