--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,10 @@ dependencies {
 //    implementation("com.github.lisawray.groupie:groupie:2.10.0")
 //    implementation("com.github.lisawray.groupie:groupie-kotlin-android-extensions:2.10.0")
 //    implementation("com.github.lisawray.groupie:groupie-viewbinding:2.10.0")
-    implementation "com.airbnb.android:epoxy:$epoxyVersion"
+//    implementation "com.airbnb.android:epoxy:$epoxyVersion"
     // Add the annotation processor if you are using Epoxy's annotations (recommended)
-    annotationProcessor "com.airbnb.android:epoxy-processor:$epoxyVersion"
-
+//    annotationProcessor "com.airbnb.android:epoxy-processor:$epoxyVersion"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
 //    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
