--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id "org.jetbrains.kotlin.android"
     id "kotlin-parcelize"
     id "kotlin-kapt"
+//    id 'androidx.navigation.safeargs'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -56,12 +58,19 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+    implementation 'com.tencent:mmkv-static:1.2.10'
 //    implementation("com.github.lisawray.groupie:groupie:2.10.0")
 //    implementation("com.github.lisawray.groupie:groupie-kotlin-android-extensions:2.10.0")
 //    implementation("com.github.lisawray.groupie:groupie-viewbinding:2.10.0")
 //    implementation "com.airbnb.android:epoxy:$epoxyVersion"
     // Add the annotation processor if you are using Epoxy's annotations (recommended)
 //    annotationProcessor "com.airbnb.android:epoxy-processor:$epoxyVersion"
+
+    def room_version = "2.4.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     implementation "androidx.paging:paging-runtime:$paging_version"
@@ -72,6 +81,7 @@ dependencies {
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
     implementation("org.orbit-mvi:orbit-viewmodel:$orbit_mvi_version")
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 //    implementation("org.orbit-mvi:orbit-core:$orbit_mvi_version")
     testImplementation("org.orbit-mvi:orbit-test:$orbit_mvi_version")
     implementation("com.github.bumptech.glide:glide:4.12.0")
