--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         ux_versionCode = 23
         ux_versionName = "0.8.0"
         kotlin_version = "1.6.10"
+        gradle_version = "7.1.2"
         appcompat_version = "1.4.1"
         fragment_version = "1.4.1"
         corektx_version = "1.7.0"
@@ -16,12 +17,28 @@ buildscript {
         epoxyVersion = "5.0.0-beta05"
         koin_version = "3.1.5"
         paging_version = "3.1.0"
+        gms_version = "4.3.10"
+        nav_version = "2.4.1"
     }
+    repositories {
+        google()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:$gms_version"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:2.8.1"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
+
 }
 plugins {
-    id "com.android.application" version "7.1.1" apply false
-    id "com.android.library" version "7.1.1" apply false
+    id "com.android.application" version "$gradle_version" apply false
+    id "com.android.library" version "$gradle_version" apply false
     id "org.jetbrains.kotlin.android" version "$kotlin_version" apply false
+
 }
 
 task clean(type: Delete) {
