--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
     }
     repositories {
         google()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
