--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+//    implementation "androidx.startup:startup-runtime:1.1.1"
 
 //    def smart_version = "2.0.5"
 //    implementation "io.github.scwang90:refresh-layout-kernel:$smart_version"
