--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 //    implementation "androidx.startup:startup-runtime:1.1.1"
 
+    implementation "org.greenrobot:eventbus:3.2.0"
+    implementation "com.jakewharton.timber:timber:5.0.1"
+
 //    def smart_version = "2.0.5"
 //    implementation "io.github.scwang90:refresh-layout-kernel:$smart_version"
 //    implementation "io.github.scwang90:refresh-header-classics:$smart_version"
@@ -89,10 +92,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 //    implementation("org.orbit-mvi:orbit-core:$orbit_mvi_version")
     testImplementation("org.orbit-mvi:orbit-test:$orbit_mvi_version")
-    implementation("com.github.bumptech.glide:glide:4.12.0")
+    implementation("com.github.bumptech.glide:glide:4.13.0")
 
     testImplementation "junit:junit:4.13.2"
     testImplementation("org.orbit-mvi:orbit-test:$orbit_mvi_version")
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 }
