--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ kapt {
 
 dependencies {
 
-    implementation project(":ultimatebarx")
+//    implementation project(":ultimatebarx")
     implementation("org.orbit-mvi:orbit-viewmodel:$orbit_mvi_version")
     implementation "androidx.core:core-ktx:$corektx_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+//    implementation "io.insert-koin:koin-annotations:$koin_version"
     implementation 'com.tencent:mmkv-static:1.2.10'
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 //    implementation("com.github.lisawray.groupie:groupie:2.10.0")
