--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "GoldenLife"
 include ":app"
-include ":ultimatebarx"
+//include ":ultimatebarx"
