--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ kapt {
 
 dependencies {
 
-//    implementation project(":ultimatebarx")
+    implementation project(":ultimatebarx")
     implementation("org.orbit-mvi:orbit-viewmodel:$orbit_mvi_version")
     implementation "androidx.core:core-ktx:$corektx_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
@@ -56,6 +56,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 //    implementation "io.insert-koin:koin-annotations:$koin_version"
@@ -74,7 +76,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 //    implementation "androidx.startup:startup-runtime:1.1.1"
 
-    implementation "org.greenrobot:eventbus:3.2.0"
+    implementation "org.greenrobot:eventbus:3.3.1"
+
     implementation "com.jakewharton.timber:timber:5.0.1"
 
 //    def smart_version = "2.0.5"
