--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,16 +8,21 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk rootProject.compileSdk
+    buildToolsVersion rootProject.buildTools
 
     defaultConfig {
         applicationId "net.wangyl.goldenlife"
-        minSdk 21
-        targetSdk 31
+        minSdk rootProject.minSdk
+        targetSdk rootProject.targetSdk
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'armeabi-v7a'
+        }
     }
 
     buildTypes {
@@ -45,6 +50,7 @@ kapt {
 
 dependencies {
 
+//    implementation project(":vbpd-full")
     implementation project(":ultimatebarx")
     implementation("org.orbit-mvi:orbit-viewmodel:$orbit_mvi_version")
     implementation "androidx.core:core-ktx:$corektx_version"
