--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+
+        minSdk = 21
+        targetSdk = 29
+        compileSdk = 31
+        buildTools = "30.0.3"
+        minSdkInstant = 21
+
         ultimatebarx_version = "0.8.0"
         ux_versionCode = 23
         ux_versionName = "0.8.0"
@@ -18,6 +25,13 @@ buildscript {
         koin_version = "3.1.5"
         paging_version = "3.1.0"
         gms_version = "4.3.10"
+
+        dependencies = [:]
+        dependencies.coreKtx = "androidx.core:core-ktx:$corektx_version"
+        dependencies.fragmentKtx = "androidx.fragment:fragment-ktx:$fragment_version"
+        dependencies.viewBinding = "androidx.databinding:viewbinding:7.1.2"
+        dependencies.lifecycleCommonJava8 = "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+        dependencies.recyclerview = "androidx.recyclerview:recyclerview:$recyclerview_version"
     }
     repositories {
         google()
