--- a/ultimatebarx/build.gradle
+++ b/ultimatebarx/build.gradle
@@ -27,7 +27,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation("androidx.appcompat:appcompat:$appcompat_version")
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
