--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,33 @@ android {
             abiFilters 'armeabi-v7a'
         }
     }
+    signingConfigs {
+        // We use a bundled debug keystore, to allow debug builds from CI to be upgradable
+        debug {
+            storeFile rootProject.file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
 
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
+
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            minifyEnabled true
+            signingConfig signingConfigs.debug
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), "proguard-rules.pro"
+        }
+
+        benchmark {
+            initWith buildTypes.release
+            signingConfig signingConfigs.debug
+            matchingFallbacks = ['release']
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), "proguard-benchmark-rules.pro"
+            debuggable false
         }
     }
     compileOptions {
@@ -47,7 +69,8 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "$compose_version"
+        kotlinCompilerVersion "$kotlin_version"
     }
     sourceSets {
         main {
@@ -56,6 +79,8 @@ android {
     }
 
 }
+
+
 
 kapt {
     correctErrorTypes = true
@@ -66,6 +91,7 @@ dependencies {
 //    implementation project(":vbpd-full")
     implementation project(":manager") //retrofiturl manager 可以动态修改baseurl
     implementation project(":base")  //基础类库
+    implementation project(":ptr")  //下拉刷新库
 
     implementation platform('com.google.firebase:firebase-bom:29.2.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -74,23 +100,27 @@ dependencies {
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.13.0")
 
     //compose相关
+    implementation("androidx.compose.runtime:runtime:$compose_version")
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation "androidx.paging:paging-compose:1.0.0-alpha14"
-    implementation "com.google.android.material:compose-theme-adapter-3:1.0.7"
+    implementation "com.google.android.material:compose-theme-adapter-3:1.0.10"
+    implementation "androidx.profileinstaller:profileinstaller:1.2.0-beta02"
+
     //accompanist  https://github.com/google/accompanist
     def accompanist = "0.24.7-alpha"
     implementation "com.google.accompanist:accompanist-pager:$accompanist"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist"
 //    implementation "com.google.accompanist:accompanist-insets-ui:$accompanist"
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist"
     implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist"
     implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist"
-    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.24.8-beta"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.8-beta"
 
-    def coil = "1.4.0"
+    def coil = "2.0.0"
     implementation "io.coil-kt:coil:$coil"
     implementation "io.coil-kt:coil-compose:$coil"
     implementation "io.coil-kt:coil-gif:$coil"
