--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,25 +15,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoldenLife.NoActionBar"
         android:usesCleartextTraffic="true">
-
+        <profileable android:shell="true" tools:targetApi="q" />
         <activity
             android:name="net.wangyl.life.ui.LaunchActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoDisplay">
-<!--新版android studio 插件 不支持该theme-->
-<!--            <meta-data android:name="android.app.shortcuts"-->
-<!--                android:resource="@xml/" />-->
-        </activity>
 
+            <!-- 新版android studio 插件 不支持该theme -->
+            <!-- <meta-data android:name="android.app.shortcuts" -->
+            <!-- android:resource="@xml/" /> -->
+        </activity>
         <activity
             android:name="net.wangyl.life.compose.ui.MainActivity"
             android:configChanges="colorMode|density|fontScale|keyboard|keyboardHidden|layoutDirection|locale|mcc|mnc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen|uiMode"
             android:exported="true"
-            android:resizeableActivity="true"
             android:launchMode="singleInstance"
+            android:resizeableActivity="true"
             android:theme="@style/Theme.GoldenLife.Home"
-            tools:targetApi="n"
-            >
+            tools:targetApi="n">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,32 +42,27 @@
         <activity
             android:name="net.wangyl.life.ui.HomeActivity"
             android:exported="true"
-            android:resizeableActivity="true"
             android:launchMode="singleInstance"
-            android:theme="@style/Theme.GoldenLife.NoActionBar"
-            >
-        </activity>
-
+            android:resizeableActivity="true"
+            android:theme="@style/Theme.GoldenLife.NoActionBar"/>
         <activity
             android:name="net.wangyl.base.SimpleActivity"
             android:exported="true"
             android:theme="@style/Theme.GoldenLife.NoActionBar">
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
-        </activity>
 
-        <!--        <provider-->
-        <!--            android:name="androidx.startup.InitializationProvider"-->
-        <!--            android:authorities="${applicationId}.androidx-startup"-->
-        <!--            android:exported="false"-->
-        <!--            tools:node="merge">-->
-        <!--            <meta-data-->
-        <!--                android:name="com.example.LitePalInitializer"-->
-        <!--                android:value="androidx.startup" />-->
-        <!--        </provider>-->
-
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity> <!-- <provider -->
+        <!-- android:name="androidx.startup.InitializationProvider" -->
+        <!-- android:authorities="${applicationId}.androidx-startup" -->
+        <!-- android:exported="false" -->
+        <!-- tools:node="merge"> -->
+        <!-- <meta-data -->
+        <!-- android:name="com.example.LitePalInitializer" -->
+        <!-- android:value="androidx.startup" /> -->
+        <!-- </provider> -->
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
@@ -76,9 +70,9 @@
             tools:node="merge">
 
             <!-- This entry makes ExampleLoggerInitializer discoverable. -->
-            <!--            <meta-data-->
-            <!--                android:name="net.wangyl.base.startup.KoinInitializer"-->
-            <!--                android:value="androidx.startup" />        -->
+            <!-- <meta-data -->
+            <!-- android:name="net.wangyl.base.startup.KoinInitializer" -->
+            <!-- android:value="androidx.startup" /> -->
             <meta-data
                 android:name="net.wangyl.life.startup.KoinInitializer"
                 android:value="androidx.startup" />
