--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,15 @@ buildscript {
         ux_versionCode = 23
         ux_versionName = "0.8.0"
         kotlin_version = "1.6.20"
-        gradle_version = "7.1.2"
+        gradle_version = "7.2.0"
         appcompat_version = "1.4.1"
         fragment_version = "1.5.0-beta01"
         activity_version = "1.6.0-alpha03"
         corektx_version = "1.7.0"
-        material_version = "1.5.0"
+        material_version = "1.6.0"
         recyclerview_version = "1.2.1"
         lifecycle_version = "2.5.0-beta01"
-        nav_version = "2.5.0-beta01"
+        nav_version = "2.5.0-rc01"
         orbit_mvi_version = "4.3.2"
         epoxyVersion = "5.0.0-beta05"
         koin_version = "3.1.5"
@@ -28,7 +28,7 @@ buildscript {
         gms_version = "4.3.10"
         okhttp_version = "4.9.3"
         startup_version = "1.1.1"
-        compose_version = '1.2.0-alpha08'
+        compose_version = '1.2.0-beta02'
 
         dependencies = [:]
         dependencies.coreKtx = "androidx.core:core-ktx:$corektx_version"
@@ -57,7 +57,8 @@ buildscript {
 plugins {
     id "com.android.application" version "$gradle_version" apply false
     id "com.android.library" version "$gradle_version" apply false
-    id "org.jetbrains.kotlin.android" version '1.6.20' apply false
+    id "org.jetbrains.kotlin.android" version '1.6.21' apply false
+    id 'com.android.test' version '7.2.0' apply false
 }
 
 
