--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,6 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 android.enableJetifier=true
+
+# Enable R8 full mode.
+android.enableR8.fullMode=true
