--- a/base/build.gradle
+++ b/base/build.gradle
@@ -48,12 +48,12 @@ dependencies {
     api "androidx.appcompat:appcompat:$appcompat_version"
     api "com.google.android.material:material:$material_version"
     api "androidx.recyclerview:recyclerview:$recyclerview_version"
-    api "androidx.constraintlayout:constraintlayout:2.1.3"
+    api "androidx.constraintlayout:constraintlayout:$constraint_version"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     api "androidx.navigation:navigation-fragment-ktx:$nav_version"
     api "androidx.navigation:navigation-ui-ktx:$nav_version"
-    api "androidx.viewpager2:viewpager2:1.0.0"
+    api "androidx.viewpager2:viewpager2:$viewpager2_version"
     api "androidx.fragment:fragment-ktx:$fragment_version"
     api "io.insert-koin:koin-android-compat:$koin_version"
     api "io.insert-koin:koin-androidx-compose:$koin_version"
