--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,14 @@ buildscript {
         ux_versionName = "0.8.0"
         kotlin_version = "1.6.20"
         gradle_version = "7.2.0"
-        appcompat_version = "1.4.1"
-        fragment_version = "1.5.0-beta01"
+        appcompat_version = "1.4.2"
+        fragment_version = "1.5.0"
         activity_version = "1.6.0-alpha03"
-        corektx_version = "1.7.0"
-        material_version = "1.6.0"
+        corektx_version = "1.8.0"
+        material_version = "1.6.1"
         recyclerview_version = "1.2.1"
-        lifecycle_version = "2.5.0-beta01"
-        nav_version = "2.5.0-rc01"
+        lifecycle_version = "2.6.0-alpha01"
+        nav_version = "2.5.0"
         orbit_mvi_version = "4.3.2"
         epoxyVersion = "5.0.0-beta05"
         koin_version = "3.1.5"
@@ -29,6 +29,8 @@ buildscript {
         okhttp_version = "4.9.3"
         startup_version = "1.1.1"
         compose_version = '1.2.0-beta02'
+        constraint_version = '2.1.4'
+        viewpager2_version = '1.0.0'
 
         dependencies = [:]
         dependencies.coreKtx = "androidx.core:core-ktx:$corektx_version"
